# invoforge

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_app.py  codecov.yml  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: FUNDING.yml  social-preview-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  container.py  version.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  generate_invoice.py  get_dashboard.py  get_working_days.py  manage_leaves.py  manage_settings.py  preview_invoice.py
app/core/: __init__.py
app/core/entities/: __init__.py  invoice.py  invoice_template.py  leave.py  settings.py
app/core/interfaces/: __init__.py  document_generator.py  invoice_repository.py  leave_repository.py  pdf_converter.py  settings_repository.py
app/core/services/: __init__.py  amount_formatter.py  invoice_calculator.py  update_checker.py  working_days_calculator.py
app/infrastructure/: __init__.py
app/infrastructure/documents/: __init__.py  docx_generator.py  html_preview_generator.py  pdf_converter.py
app/infrastructure/persistence/: __init__.py  database.py  sqlite_invoice_repository.py  sqlite_leave_repository.py  sqlite_settings_repository.py
app/presentation/: __init__.py
app/presentation/routes/: __init__.py  dashboard.py  invoices.py  leaves.py  pages.py  settings.py
app/templates/: index.html  setup.html
static/: sw.js
static/css/: styles.css
static/favicon/: favicon_1b9ea005.html  site.webmanifest
static/icons/: icon.icns
static/js/: app.js
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_amount_formatter.py  test_entities.py  test_invoice_calculator.py  test_pages.py  test_use_cases.py  test_working_days_calculator.py
